[package]
name = "qmphelper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
qapi = { version = "0.13.0", features = ["qga", "qmp", "async-tokio-all", "qapi-qmp", "async-tokio-net"]}
tokio = { version = "1.33", features = ["macros", "rt-multi-thread" ] }
futures = { version = "0.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.17" }
